force-app/main/default/objects/NSF_Tracker__c/NSF_Tracker__c.object-meta.xml
<CustomObject>
    <label>NSF Tracker</label>
    <nameField>
        <label>NSF Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSF Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>