force-app/main/default/objects/NSF_Tracker__c/fields/Load_Batch_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Load_Batch_Date_c__c</fullName>
    <label>Load Batch Date</label>
    <type>Date</type>
</CustomField>