force-app/main/default/objects/NSF_Tracker__c/fields/NSF_Date__c.field-meta.xml
<CustomField>
    <fullName>NSF_Date__c</fullName>
    <label>NSF Date</label>
    <type>Date</type>
</CustomField>