force-app/main/default/objects/NSF_Tracker__c/fields/NSF_Week__c.field-meta.xml
<CustomField>
    <fullName>NSF_Week__c</fullName>
    <label>NSF Week</label>
    <length>30</length>
    <type>Text</type>
</CustomField>