force-app/main/default/objects/NSF_Tracker__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>